-- 2024.04.15 - 1.3.6

- feat: new option to disable round types befault in player preferences
- fix: Changed default weapons to use classnames instead of indexes

-- 2024.04.14 - 1.3.5

- refactor: AFK and Command announcements are now sent only on player join, not every round
- refactor: Change settings to use weapon names instead of IDs (easier for users)
- perf: Map changes wont reload all players anymore
- perf: Preferences wont be saved instantly to MySQL, but on disconnect
- fix: Warmup weapon allocation problems
- fix: Duplicated arena loading on map change
- fix: Preferences not get loaded on hotreload
- fix: State change related problems
- fix: Better CSS skinchanger knife support
- fix: AFK reminder message is now sent only once
- fix: Bots being processed in MySQL
- fix: MySQL insert query problems

-- 2024.04.13 - 1.3.4

- fix: Possible fix for GiveNamedItem2 problems on some servers
- fix: The default weapons are now customizable

-- 2024.04.11 - 1.3.3

- fix: Remove HLTV from queues(?)

-- 2024.04.11 - 1.3.2

- fix: Challenge cmd, not in arena problem
- fix: Armor/Helmet problems
- fix: Weapons not given (convar problem)

-- 2024.04.11 - 1.3.1

- feat: Add support for Windows MetamodSkinChanger support
- feat: Worst scenario filter for queue to prevent duplicates
- fix: Add missing text, if no command found for chat message

-- 2024.04.09 - 1.3.0

- feat: Add challenges (duels)
- feat: Public developer API for round types
- feat: Example dodgeball round type
- fix: Helmet and armor give/remove problems
- fix: Loading delay (now the plugin load instantly)
- optimise: Weapon giving logics
- optimise: Plugin loading mechanism

-- 2024.04.06 - 1.2.1

- feat: Windows support added back
- fix: HardwareID is changing with docker reboot
- fix: Health getter throws null pointer exception
- fix: Arena clantag not changes if player stay alive
- upgrade: Hardware lock algorithm

-- 2024.04.04 - 1.2.0

- upgrade: Arena setup algorithm
- upgrade: Arena models