@@ -1,7 +1,10 @@
 -- 2024.04.15 - 1.3.6
 
-- feat: new option to disable round types befault in player preferences
+- feat: New option to disable round types befault in player preferences
+- feat: Added clantag force to always enforce arena clantags
 - fix: Changed default weapons to use classnames instead of indexes
+- fix: No opponent round now rolls first player's roundtypes instead of random
+- fix: Last roundtype cannot be disabled to have atleast one selected
 
 -- 2024.04.14 - 1.3.5
 
